Fix bg img not visible on ios.

--- a/components/features/Landing/Hero/Hero.module.scss
+++ b/components/features/Landing/Hero/Hero.module.scss
@@ -14,10 +14,8 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
-  background-image: url("/bg-top-1.png");
-  background-position: right center;
-  background-size: contain;
-  background-repeat: no-repeat;
+  pointer-events: none;
+  user-select: none;
 }
 .heading {
   margin: 0;
